--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "nodemon",
     "build": "tsc",
+    "prisma:init": "npx prisma migrate dev --name init",
+    "prisma:generate": "npx prisma generate",
+    "prisma:update": "npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Prakash",
@@ -19,12 +22,14 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.0.2",
+    "prisma": "^5.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
