--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.11.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/validator": "^13.11.8",
     "nodemon": "^3.0.2",
     "prisma": "^5.8.1",
     "swagger-jsdoc": "^6.2.8",
@@ -34,6 +35,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "validator": "^13.11.0"
   }
 }
