--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
@@ -21,11 +23,13 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.17.22",
+    "@types/node": "^20.11.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
