--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.17.22",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
