--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
@@ -22,9 +23,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
