--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
+    "country-flag-icons": "^1.5.9",
     "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
