--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@novu/node": "^0.23.1",
     "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
