--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon",
-    "build": "tsc",
+    "build": "npx prisma migrate dev && tsc",
     "prisma:init": "npx prisma migrate dev --name init",
     "prisma:generate": "npx prisma generate",
     "prisma:update": "npx prisma migrate dev",
