--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,12 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.5",
+    "@types/otp-generator": "^4.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/validator": "^13.11.8",
     "nodemon": "^3.0.2",
-    "prisma": "^5.8.1",
+    "prisma": "^5.9.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
@@ -46,6 +47,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "otp-generator": "^4.0.1",
     "validator": "^13.11.0"
   }
 }
