--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/use-infinite-scroll": "^2.1.2",
     "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
@@ -19,6 +20,7 @@
     "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
+    "luxon": "^3.4.4",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.17.22",
     "@types/js-cookie": "^3.0.6",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
