--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^18.2.43",
     "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.17",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
