--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
     "@types/otp-generator": "^4.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -47,6 +48,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "otp-generator": "^4.0.1",
     "validator": "^13.11.0"
   }
